--- a/Forelesning2808/index.html
+++ b/Forelesning2808/index.html
@@ -19,21 +19,19 @@
         </header>
         <main>
             <section>
-                <h2>Det finnes mange dyr</h2>
-                <p>Dyr er organismer som hører til dyreriket, Animalia. Man regner at man kjenner om lag én million nålevende og tre–fire hundre tusen fossile arter av dyr.</p>
+                <h2>Facts kan være en lifesaver!</h2>
+                <p>Velkommen til FunFactsForFridays! Nettsiden som passer som en samtalestarter for enhver sammenkomst. Trykk deg igjennom nettsiden og finn temaer som du synes er interressant, eller som du kanskje aldri har tenk over. Det finnes mye interessant der ute!</p>
             </section>
             <section>
-                <h2>Hester</h2>
+                <h2>Dyr</h2>
                 <article>
-                    <h3>Hester er fantastiske dyr</h3>
-                    <p>Hester har en enestående tilpasningsevne og finnes nå som husdyr i nesten alle land. Forvillede hester finnes i Nord- og Sør-Amerika samt Australia, hvor de som regel lever i mindre flokker. I verden er det over 60 millioner hester, fordelt på mange raser. Tidligere antok en at det fantes over 800 hesteraser, disse tallene er nå nedjustert til mellom 300 og 600 fordi raser er utdødd eller fordi samme rase finnes i mange land, men tidligere ble registrert som ulike raser. Mange raser er lokale/nasjonale, mens mer enn 70 er internasjonale.</p>
-                    <a href="https://snl.no/hest">Les mer.</a>
+                    <h3>Det er mye du ikke vet om dyr!</h3>
+                    <p>Dyr finnes utbredt over hele verden. De kommer i mange former  og fasonger, og har helt utrolige egenskaper! Lær noe mer om dem, da vel!</p>
                 </article>
-            <h2>Lamaer</h2>
+            <h2>Fremkomstmidler</h2>
             <article>
-                <h3>Det du ikke vet om lamaer</h3>
-                <p>Lamaer (Lama) er en slekt som består av kameldyr uten pukkel. Slekten eksisterer som to nålevende arter, lama og guanako. Lamaen har vært domestisert som husdyr i omkring 6 000 år, mens guanakoen for det meste lever i viltlevende flokker. Begge artene er flokkdyr som lever naturlig i alpine strøk.</p>
-                <a href="https://snl.no/lama">Les mer.</a>
+                <h3>Fremkomsmidler er bra, eller?</h3>
+                <p>Fremokmstmidler har blitt utviklet igjen og igjen over en relativt kort tidsperiode. Det er alt fra biler til båter, fly, motorsykler, brett, rulleskøyter eller nye sykler. Her kan du forstå, eller bare se på nye fremkomstmidler.</p>
             </article>
             </section>
         </main>
