Added noen lenker
added noen ekstra lenker til de nye kontaktsidene about.html og kontakt.html.

--- a/Forelesning2808/index.html
+++ b/Forelesning2808/index.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <title>FORSIDE</title>
+        <title>FunFactsForFridays</title>
     </head>
     <body>
-        <header>
+        <header id="topp">
             <h1>FunFactsForFridays</h1>
             <nav>
                 <ul>
-                    <li><a href="">Kontakt oss</a></li>
-                    <li><a href="">Om oss</a></li>
-
+                    <li><a href="kontakt.html">Kontakt oss</a></li>
+                    <li><a href="about.html">Om oss</a></li>
+                    <li><a href="index.html">Hjem</a></li>
+                    <li><a href="#bunn">Nederts på siden</a></li>
                 </ul>
 
             </nav>
@@ -45,7 +46,12 @@
                 </ul>
             </nav>
         </aside>
-        <footer>Annika Bekkevold Pfeifer 2024</footer>
+        <footer id="bunn">
+            <p>Annika Bekkevold Pfeifer 2024</p>
+            <a href="#topp">Toppen av siden</a>
+
+        </footer>
+
     </body>
 
 </html>
