--- a/Forelesning2808/kontakt.html
+++ b/Forelesning2808/kontakt.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <title>Kontakt oss</title>
+        <title>Kontakt oss!</title>
     </head>
     <body>
         <header>
-            <h1>Kontakt oss</h1>
+            <h1>FunFactsForFridays</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">FunFactsForFridays</a></li>
@@ -15,7 +15,52 @@
                 </ul>
             </nav> 
         </header>
+        <section>
+            <h2>Kontakt oss!</h2>
+        </section>
         <p>Tlf: 91602663</p>
+        <section>
+            <h2>Ta kontakt med oss idag!</h2>
+            <form>
+                <label for="navn">Navn:</label>
+                <input type="text" name="navn" placeholder="Annika Bekkevold Pfeifer..." id="navn" maxlength="20" required>
+
+                <label>
+                    E-post:
+                    <input type="email" name="email" placeholder="eksempel@mail.com" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$">
+                </label>
+                <label>
+                    Emne:
+                    <input type="text" name="emne" placeholder="Hva handler det om?">
+                </label>
+                <label>
+                    Melding:
+                    <textarea name="melding" required></textarea>
+                    <input type="submit" value="Send melding">
+                </label>
+                <h2>Fant du det du lette etter?</h2>
+                <label>
+                    Nei
+                    <input type="radio" name="valg">
+                </label>
+                <label>
+                    Ja
+                    <input type="radio" name="valg">
+                </label>
+
+                <label>
+                    Hvilket emne likte du best?
+                    <select name="fav">
+                        <option value="Katter">Katter</option>
+                        <option value="Hunder">Hunder</option>
+                        <option value="Hester">Hester</option>
+                        <option value="Lamaer">Lamaer</option>
+                        <option value="Elefanter">Elefanter</option>
+                    </select>
+                </label>
+
+            </form>
+        </section>
 
         <footer>Annika Bekkevold Pfeifer 2024</footer>
 
