fikset litt her og der

--- a/Min1NettsdeForlsning2808-/about.html
+++ b/Min1NettsdeForlsning2808-/about.html
@@ -9,7 +9,7 @@
     <h1>Om oss</h1>
     <nav>
         <ul>
-            <li><a href="index.html">FunFactsForFridays</a></li>
+            <li><a href="hovedside.html">FunFactsForFridays</a></li>
             <li><a href="kontakt.html">Kontakt oss</a></li>
         </ul>
     </nav>
