--- a/HTML50velse/validering.html
+++ b/HTML50velse/validering.html
@@ -9,8 +9,8 @@
             <h1>Velkommen til Min side</h1>
             <nav>
                 <ul>
-                    <li><a href=index.html>Hjem</a></li>
-                    <li><a href=about.html>Om Meg</a></li>
+                    <li><a href="index.html">Hjem</a></li>
+                    <li><a href="about.html">Om Meg</a></li>
                     <li><a href="contact.html">Kontakt</a></li>
                 </ul>
             </nav>
