--- a/Min1NettsdeForlsning2808-/kontakt.html
+++ b/Min1NettsdeForlsning2808-/kontakt.html
@@ -10,7 +10,7 @@
             <h1>FunFactsForFridays</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">FunFactsForFridays</a></li>
+                    <li><a href="hovedside.html">FunFactsForFridays</a></li>
                     <li><a href="about.html">Om oss</a></li>
                 </ul>
             </nav> 
