--- a/Zalando lite/index.html
+++ b/Zalando lite/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <header>
-            <img src="Bilder/zalando logo.webp" alt="Nettstedlogo">
+            <img id="mainlogo" src="https://logodix.com/logo/1718354.png" alt="Nettstedlogo">
             <nav>
-                <ul>
+                <ul id="hovednavigasjon">
                     <li><a href="#">Nyheter</a></li>
                     <li><a href="#">Nordisk stil</a></li>
                     <li><a href="#">Klær</a></li>
