gjorde siden mer fullstendig

--- a/Zalando lite/index.html
+++ b/Zalando lite/index.html
@@ -7,10 +7,11 @@
         <title>Zalando Lite | Forside</title>
     </head>
     <body>
+        <div id="grid-container">
         <header>
             <img id="mainlogo" src="https://logodix.com/logo/1718354.png" alt="Nettstedlogo">
-            <nav>
-                <ul id="hovednavigasjon">
+            <nav class="flex-space-b">
+                <ul class="flex-menu">
                     <li><a href="#">Nyheter</a></li>
                     <li><a href="#">Nordisk stil</a></li>
                     <li><a href="#">Klær</a></li>
@@ -19,7 +20,7 @@
                     <li><a href="#">Streetwear</a></li>
                     <li><a href="#">Sport</a></li>
                     <li><a href="#">Designer</a></li>
-                    <li><a href="#">Outlet</a></li>
+                    <li><a href="#" id="outlet">Outlet</a></li>
                 </ul>
                 <form>
                     <label for="search">Søk</label>
@@ -27,65 +28,78 @@
                     <input type="submit" value="søk">
                 </form>
             </nav>
+        </header>
             <main>
                 <section>
                     <h2>Våre beste deals</h2>
                     <a href="#">Shop nå</a>
                     <img src="Bilder/forsideSko.webp" alt="Våre beste deals">
                 </section>
-                <section>
+                <section class="flex-space-b">
+
                     <h2>Produkter</h2>
-                    <article>
+
+                    <article class="product-card">
                         <img src="Bilder/sko2.webp" alt="Adidas grønne sneakers">
                         <a href="#">Adidas originals</a>
-                        <a href="#">Handbal Spezial</a>
+                        <a href="#"><h3>Handbal Spezial</h3></a>
                         <p>899 kr</p>
                     </article>
-                    <article>
+
+                    <article class="product-card">
                         <img src="Bilder/sko2.webp" alt="Adidas grønne sneakers">
                         <a href="#">Adidas originals</a>
-                        <a href="#">Handbal Spezial</a>
+                        <a href="#"><h3>Handbal Spezial</h3></a>
                         <p>899 kr</p>
                     </article>
-                    <article>
+
+                    <article class="product-card">
                         <img src="Bilder/sko2.webp" alt="Adidas grønne sneakers">
                         <a href="#">Adidas originals</a>
-                        <a href="#">Handbal Spezial</a>
+                        <a href="#"><h3>Handbal Spezial</h3></a>
                         <p>899 kr</p>
                     </article>
-                    <article>
+
+                    <article class="product-card">
                         <img src="Bilder/sko2.webp" alt="Adidas grønne sneakers">
                         <a href="#">Adidas originals</a>
-                        <a href="#">Handbal Spezial</a>
+                        <a href="#"><h3>Handbal Spezial</h3></a>
                         <p>899 kr</p>
                     </article>
-                    <article>
+
+                    <article class="product-card">
                         <img src="Bilder/sko2.webp" alt="Adidas grønne sneakers">
                         <a href="#">Adidas originals</a>
-                        <a href="#">Handbal Spezial</a>
+                        <a href="#"><h3>Handbal Spezial</h3></a>
                         <p>899 kr</p>
                     </article>
-                    <article>
+
+                    <article class="product-card">
                         <img src="Bilder/sko2.webp" alt="Adidas grønne sneakers">
                         <a href="#">Adidas originals</a>
-                        <a href="#">Handbal Spezial</a>
+                        <a href="#"><h3>Handbal Spezial</h3></a>
                         <p>899 kr</p>
                     </article>
-                    <article>
+
+                    <article class="product-card">
                         <img src="Bilder/sko2.webp" alt="Adidas grønne sneakers">
                         <a href="#">Adidas originals</a>
-                        <a href="#">Handbal Spezial</a>
+                        <a href="#"><h3>Handbal Spezial</h3></a>
                         <p>899 kr</p>
                     </article>
-                    <article>
+
+                    <article class="product-card">
                         <img src="Bilder/sko2.webp" alt="Adidas grønne sneakers">
                         <a href="#">Adidas originals</a>
-                        <a href="#">Handbal Spezial</a>
+                        <a href="#"><h3>Handbal Spezial</h3></a>
                         <p>899 kr</p>
                     </article>
+
                 </section>
             </main>
-        </header>
-
+        </div>
+        <footer>
+            Zalando Light 2024
+        </footer>
     </body>
 </html>
