--- a/Zalando lite/index.html
+++ b/Zalando lite/index.html
@@ -8,10 +8,11 @@
     </head>
     <body>
         <div id="grid-container">
-        <header>
+        <header id="global-header">
             <img id="mainlogo" src="https://logodix.com/logo/1718354.png" alt="Nettstedlogo">
             <nav class="flex-space-b">
-                <ul class="flex-menu">
+                <i class="fa-solid fa-burger" onclick="toggleMenu()"></i>
+                <ul class="flex-menu" id="menu">
                     <li><a href="#">Nyheter</a></li>
                     <li><a href="#">Nordisk stil</a></li>
                     <li><a href="#">Klær</a></li>
@@ -30,9 +31,13 @@
             </nav>
         </header>
             <main>
-                <section>
+                <section id="banner">
+
+                    <div>
                     <h2>Våre beste deals</h2>
                     <a href="#">Shop nå</a>
+                    </div>
+
                     <img src="Bilder/forsideSko.webp" alt="Våre beste deals">
                 </section>
                 <section class="flex-space-b">
@@ -97,9 +102,26 @@
 
                 </section>
             </main>
-        </div>
+
         <footer>
             Zalando Light 2024
         </footer>
+
+    </div>
+
+    <script>
+
+        let toggleMenu = () => {
+            let x = document.getElementById("menu");
+
+            if (x.style.display === "flex") {
+
+                x.style.display = "none";
+            } else {
+                x.style.display = "flex"
+            }
+        }
+    </script>
+    
     </body>
 </html>
