--- a/Zalando lite/index.html
+++ b/Zalando lite/index.html
@@ -30,6 +30,7 @@
                 </form>
             </nav>
         </header>
+        </div>
             <main>
                 <section id="banner">
 
