nettside uke 43, labøvelse

--- a/Labøvelser/uke43/uke43.html
+++ b/Labøvelser/uke43/uke43.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="ikoner/css/solid.css">
     <link rel="stylesheet" href="ikoner/css/fontawesome.css">
     <link rel="stylesheet" href="ikoner/css/brands.css">
+    <link rel="stylesheet" href="css/main.css">
     
     <title>SASS</title>
 </head>
@@ -13,6 +14,7 @@
     <header>
         <a href="index.html" class="logo"><img src="https://picsum.photos/id/40/100/100" alt="logo"></a>
     </header>
+    
     <nav>
         <ul>
             <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
@@ -21,6 +23,7 @@
             <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
         </ul>
     </nav>
+
     <main>
         <section id="welcome-banner">
             <header>
@@ -40,6 +43,7 @@
                 <h3>Hjem og interiør</h3>
             </article>
         </section>
+        <div id="grid-container">
         <section id="news">
             <h2>Nyheter</h2>
             <div class="scroll-container">
@@ -89,6 +93,7 @@
             </article>
         </div>
         </section>
+        </div>
         <section id="popular">
             <h2>Populære kategorier</h2>
             <article>
